# Binance-Trading-Bot

./: .env  .gitignore  ARCHITECTURE.md  Dockerfile.backend  INSTALLATION.md  LICENSE  QUANTITY_CALCULATION.md  README.md  STRATEGY.md  TELEGRAM_PAYMENT.md  balance_checker.py  basic_strategy.py  buy_sell_handler.py  config.py  docker-compose.yml  main.py  pyproject.toml
api/: routes.py  trading_config.json
data/: init_order_storage.py  order_book.json
strategies/: basic_strategy.py
telegram_bot/: Dockerfile.telegram  bot.py  razerpay.py  server_call.py
utils/: balance_checker.py  bot_state.py  buy_sell_handler.py  config.py  gpay_parser.py  historical_handler.py  logger.py  order_storage.py  order_storage_utils.py  order_utils.py  pnl_analyzer.py  quantity_calculator.py  websocket_handler.py
utils/websocket_client/: clear_screen.py  display.py  ha_utils.py  heikin_ashi.py  ohlc_collector.py  strategy.py  ws_listener.py
